[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scenes/fotos/aplausos.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/fotos/leer.jpg" type="Texture" id=2]
[ext_resource path="res://Scenes/fotos/papel.jpg" type="Texture" id=3]
[ext_resource path="res://fonts/text-hueso.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/fotos/zoom.jpg" type="Texture" id=5]
[ext_resource path="res://fonts/text.tres" type="Theme" id=6]
[ext_resource path="res://Scenes/end_screen.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/hueso.png" type="Texture" id=9]
[ext_resource path="res://audio/thisischristmas.ogg" type="AudioStream" id=10]
[ext_resource path="res://Scenes/fotos/milka.jpg" type="Texture" id=11]

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("transicion/transicion:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("transicion/transicion:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Button:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_out_end"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("transicion/transicion:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="end_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.282353, 0.662745, 0.65098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transicion" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )
anims/fade_out = SubResource( 2 )
anims/fade_out_end = SubResource( 3 )

[node name="transicion" type="ColorRect" parent="transicion"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.68179
margin_bottom = 1.68176
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mensaje_group" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.0
margin_top = 10.0
margin_right = -548.0
margin_bottom = -43.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="milka" type="Sprite" parent="mensaje_group"]
position = Vector2( 750.303, 240.698 )
rotation = 1.57079
scale = Vector2( 0.561826, 0.561826 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="mensaje_group"]
margin_top = 124.0
margin_right = 449.0
margin_bottom = 422.0
text = "Milka eres la mejor! Antes de darte tu merecido premio quiero enseñarte los regalos que has recuperado de este 2020.

¡Muchas gracias!"
align = 1
autowrap = true

[node name="aplausos_group" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 27.1591
margin_top = 28.3182
margin_right = -645.841
margin_bottom = -42.6818
__meta__ = {
"_edit_use_anchors_": false
}

[node name="aplausos" type="Sprite" parent="aplausos_group"]
position = Vector2( 827.644, 252.352 )
scale = Vector2( 0.561826, 0.561826 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="aplausos_group"]
margin_top = 158.0
margin_right = 350.0
margin_bottom = 370.0
text = "Recuperar la importancia de la palabra 

GRACIAS"
align = 1
autowrap = true

[node name="leer_group" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 37.0
margin_right = -551.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leer" type="Sprite" parent="leer_group"]
position = Vector2( 730.046, 342.955 )
scale = Vector2( 0.335, 0.335 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="leer_group"]
margin_top = 237.0
margin_right = 436.0
margin_bottom = 363.0
text = "“Forzarnos” a darnos tiempo y estar tranquilos en casa"
align = 1
autowrap = true

[node name="papel_group" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -529.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="papel" type="Sprite" parent="papel_group"]
position = Vector2( 754.137, 266.955 )
scale = Vector2( 0.335, 0.335 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="papel_group"]
margin_top = 237.0
margin_right = 475.0
margin_bottom = 363.0
text = "Tener presente que necesitamos mucho menos de lo que creíamos "
align = 1
autowrap = true

[node name="zoom_group" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -470.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zoom" type="Sprite" parent="zoom_group"]
position = Vector2( 516, 370 )
scale = Vector2( 0.642224, 0.642224 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="zoom_group"]
margin_top = 23.0
margin_right = 1024.0
margin_bottom = 106.0
text = "Cursos acelerados de nuevas tecnologías para pasar tiempo con los que estaban cerca o lejos físicamente"
align = 1
autowrap = true

[node name="hueso_group" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hueso" type="Sprite" parent="hueso_group"]
position = Vector2( 524.81, 347.053 )
scale = Vector2( 8, 8 )
texture = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="hueso_group"]
margin_right = 1024.0
margin_bottom = 550.0
size_flags_vertical = 3
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="hueso_group/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 126.0
text = "MILKA

¡Aquí tienes tu premio! "
align = 1
autowrap = true

[node name="CenterContainer" type="CenterContainer" parent="hueso_group/VBoxContainer"]
margin_top = 156.0
margin_right = 1024.0
margin_bottom = 206.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="hueso_group/VBoxContainer/CenterContainer" instance=ExtResource( 8 )]
margin_left = 387.0
margin_top = 0.0
margin_right = 637.0
margin_bottom = 50.0
text = "Salir"

[node name="Label2" type="Label" parent="hueso_group"]
margin_left = 272.077
margin_top = 331.584
margin_right = 746.077
margin_bottom = 386.584
size_flags_vertical = 6
theme = ExtResource( 4 )
text = "¡Feliz Navidad y 2021!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="." instance=ExtResource( 8 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 1024.0
margin_bottom = 130.0
text = "Siguiente"

[node name="TextureButton" parent="Button" index="0"]
margin_left = 20.1815
margin_top = 529.765
margin_right = 270.181
margin_bottom = 579.765

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0
autoplay = true
[connection signal="pressed" from="hueso_group/VBoxContainer/CenterContainer/Button/TextureButton" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="Button/TextureButton" to="." method="_on_TextureButton_pressed"]

[editable path="hueso_group/VBoxContainer/CenterContainer/Button"]

[editable path="Button"]
